# Renderer

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  CheckersTexture.cpp  CheckersTexture.h  Collidable.h  Color.cpp  Color.h  DiffuseMat.cpp  DiffuseMat.h  DiffuseSpecularMat.cpp  DiffuseSpecularMat.h  DirectionalLight.cpp  DirectionalLight.h  FullMat.cpp  FullMat.h  Light.h  Listener.h  Mapped.h  Mapping.h  Material.h  Materialize.h  Notifier.h  Object.h  Plane.cpp  Plane.h  PlaneMapping.cpp  PlaneMapping.h  PointLight.cpp  PointLight.h  README.md  Ray.cpp  Ray.h  RayCastHit.cpp  RayCastHit.h  RenderLog.cpp  RenderLog.h  Renderer.cpp  Renderer.h  (+17 more)
